--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="line"></div>
           </li>
           <li>
-            service
+            servicer
             <div class="line"></div>
           </li>
           <li>
@@ -42,8 +42,10 @@
           <span class="test">L</span>
           <span class="test">L</span>
           <span class="test">O</span>
+          <span class="test">O</span>
         </h1>
       </div>
     </div>
   </body>
+  <input type="text" />
 </html>
